# webterm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
frontend/: index.html  main.js
scripts/: smoke_test.sh
src/: frontend.rs  main.rs  pty.rs  session.rs
