[package]
name = "webterm"
version = "0.1.0"
edition = "2021"
description = "极简网页终端服务（纯 Rust），浏览器经 WebSocket 拿到本机 Shell"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[profile.release]
opt-level = 2
